2017-08-13  Adrian Perez de Castro  <aperez@igalia.com>

        [WPE] Implement WebCore::standardUserAgent()
        https://bugs.webkit.org/show_bug.cgi?id=175507

        Reviewed by Carlos Alberto Lopez Perez.

        Implement missing User-Agent handling for the WPE port by sharing the code with the GTK+ port.

        * Source/cmake/OptionsGTK.cmake: Rename "GTK" with "GLIB" in UA version macros.
        * Source/cmake/OptionsWPE.cmake: Add UA version macros.

2017-08-11  Ryosuke Niwa  <rniwa@webkit.org>

        Replace DATA_TRANSFER_ITEMS by a runtime flag and add a stub implementation
        https://bugs.webkit.org/show_bug.cgi?id=175474
        <rdar://problem/33844628>

        Reviewed by Wenson Hsieh.

        * Source/cmake/OptionsMac.cmake:
        * Source/cmake/OptionsWin.cmake:
        * Source/cmake/WebKitFeatures.cmake:
        * Source/cmake/tools/vsprops/FeatureDefines.props:
        * Source/cmake/tools/vsprops/FeatureDefinesCairo.props:

2017-08-11  Konstantin Tokarev  <annulen@yandex.ru>

        [CMake] Fix broken use of REQUIRED with find modules
        https://bugs.webkit.org/show_bug.cgi?id=175427

        Reviewed by Michael Catanzaro.

        Module name passed to find_package_handle_standard_args() must exactly
        match file name of CMake find module including letter case, e.g. "WebP"
        must be used in FindWebP.cmake file. Otherwise find_package() arguments
        (REQUIRED, QUIET, version) are not processed correctly.

        To continue using old XXX_FOUND variables without case changes porting
        to new find_package_handle_standard_args syntax which has FOUND_VAR
        parameter. Unfortunately, variable name GTK_UNIX_PRINT_FOUND is not
        allowed by find_package_handle_standard_args when package name is
        GTKUnixPrint, so it's replaced to GTKUnixPrint_FOUND (default).

        * Source/cmake/FindGTKUnixPrint.cmake:
        * Source/cmake/FindGeoClue2.cmake: