@@ -194,8 +194,8 @@ set(ENABLE_PLUGIN_PROCESS ${ENABLE_NETSCAPE_PLUGIN_API})
 add_definitions(-DBUILDING_GTK__=1)
 add_definitions(-DGETTEXT_PACKAGE="WebKit2GTK-${WEBKITGTK_API_VERSION}")
 add_definitions(-DDATA_DIR="${CMAKE_INSTALL_DATADIR}")
-add_definitions(-DUSER_AGENT_GLIB_MAJOR_VERSION="604")
-add_definitions(-DUSER_AGENT_GLIB_MINOR_VERSION="1")
+add_definitions(-DUSER_AGENT_MAJOR_VERSION="604")
+add_definitions(-DUSER_AGENT_MINOR_VERSION="1")
 add_definitions(-DWEBKITGTK_API_VERSION_STRING="${WEBKITGTK_API_VERSION}")
 
 set(GTK_LIBRARIES ${GTK3_LIBRARIES})
