@@ -1,3 +1,15 @@
+2017-08-14  Adrian Perez de Castro  <aperez@igalia.com>
+
+        [WPE] Implement WebCore::standardUserAgent()
+        https://bugs.webkit.org/show_bug.cgi?id=175507
+
+        Reviewed by Michael Catanzaro.
+
+        Remove "_GLIB" from user-agent version macros.
+
+        * platform/glib/UserAgentGLib.cpp:
+        (WebCore::versionForUAString):
+
 2017-08-14  Chris Dumez  <cdumez@apple.com>
 
         Unreviewed, rollout r220622 & r220696
